# xdcs-server/src/main/java/pl/edu/agh/xdcs/db/dao/LogLineDao.java
@@ -5,6 +5,7 @@ import pl.edu.agh.xdcs.db.entity.AgentEntity;
 import pl.edu.agh.xdcs.db.entity.LogLineEntity;
 
 import java.time.Instant;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -17,28 +18,24 @@ public class LogLineDao extends EntityDaoBase<LogLineEntity> {
         return LogLineEntity.class;
     }
 
+    private <T> List<T> dummyList() {
+        return Collections.singletonList(null);
+    }
+
     @SuppressWarnings("unchecked")
-    public List<LogLineEntity> findByPeriod(String taskId, Instant from, Instant to) {
+    public List<LogLineEntity> query(String taskId, Instant from, Instant to, List<AgentEntity> agents) {
         return entityManager.createQuery("select ll from LogLine ll " +
                 "where " +
                 "ll.task.id = :taskId and " +
                 "ll.time >= :f and " +
-                "ll.time <= :t " +
+                "ll.time <= :t and " +
+                "(:queryAgents = false or ll.loggedBy in :agents) " +
                 "order by ll.time")
                 .setParameter("taskId", taskId)
                 .setParameter("f", Optional.ofNullable(from).orElse(DbUtils.MIN_INSTANT))
                 .setParameter("t", Optional.ofNullable(to).orElse(DbUtils.MAX_INSTANT))
-                .getResultList();
-    }
-
-    @SuppressWarnings("unchecked")
-    public List<LogLineEntity> findByAgents(String taskId, List<AgentEntity> agents) {
-        return entityManager.createQuery("select ll from LogLine ll " +
-                "where ll.loggedBy in :agents and " +
-                "ll.task.id = :taskId " +
-                "order by ll.time")
-                .setParameter("agents", agents)
-                .setParameter("taskId", taskId)
+                .setParameter("queryAgents", agents != null)
+                .setParameter("agents", agents == null || agents.isEmpty() ? dummyList() : agents)
                 .getResultList();
     }
 }
